Se ajusta la palabra contactanos con tilde en la primera A

--- a/compras/consolasnitendoSwitch.html
+++ b/compras/consolasnitendoSwitch.html
@@ -54,7 +54,7 @@
                   <li><a class="dropdown-item" href="juegosPlayStation.html">Juegos PlayStation</a></li>
                 </ul>
                 <li class="nav-item">
-                  <a class="nav-link" href="../contacto.html">Contactanos</a>
+                  <a class="nav-link" href="../contacto.html"></a>
                 </li>
             </ul>
             
@@ -81,7 +81,7 @@
         <div class="d-flex justify-content-center align-items-center h-100">
           <div class="text-white">
             <h1 class="mb-3" style="text-align: center; font-size: 47px; font-weight: 600;">SI PREFIERES LLEVAR TU CONSOLA A TODOS LADOS</h1>
-            <h4 class="mb-3">Dale en comprar o contactanos</h4>
+            <h4 class="mb-3">Dale en comprar o </h4>
             <a
               data-mdb-ripple-init
               class="btn btn-outline-light btn-lg"
