--- a/consolas_playStation.html
+++ b/consolas_playStation.html
@@ -47,7 +47,7 @@
                 <li><a class="dropdown-item" href="consolas.html">Todas las consolas</a></li>
               </ul>
               <li class="nav-item">
-                <a class="nav-link" href="contacto.html">Contactanos</a>
+                <a class="nav-link" href="contacto.html">Contáctanos</a>
               </li>
           </ul>
           
@@ -75,7 +75,7 @@
           <div class="d-flex justify-content-center align-items-center h-100">
             <div class="text-white">
               <h1 class="mb-3" style="text-align: center; font-size: 47px; font-weight: 600;">EXPERIENCIA UNICA CON TU PLAYSTATION</h1>
-              <h4 class="mb-3">Dale en comprar o contactanos</h4>
+              <h4 class="mb-3">Dale en comprar o contáctanos</h4>
               <a
                 data-mdb-ripple-init
                 class="btn btn-outline-light btn-lg"
