--- a/contacto.html
+++ b/contacto.html
@@ -51,7 +51,7 @@
                 <li><a class="dropdown-item" href="./compras/juegosPlayStation.html">Juegos PlayStation</a></li>
               </ul>
               <li class="nav-item">
-                <a class="nav-link" href="contacto.html">Contactanos</a>
+                <a class="nav-link" href="contacto.html">Contáctanos</a>
               </li>
           </ul>
           
@@ -141,7 +141,7 @@
         </div>
 
         <form style="max-width: 580px;"  action="https://formspree.io/f/xnnaaeyr" method="POST" autocomplete="off">
-          <h2 class="titulo_contacto" style="text-align: center; font-size: 35px; font-weight: 600; color: black;" >CONTACTANOS</h2>
+          <h2 class="titulo_contacto" style="text-align: center; font-size: 35px; font-weight: 600; color: black;" >CONTÁCTANOS</h2>
           <br /><br />
           <!-- Name input -->
           <div data-mdb-input-init class="form-outline mb-4">
