--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <li><a class="dropdown-item" href="./compras/juegosPlayStation.html">Juegos PlayStation</a></li>
               </ul>
               <li class="nav-item">
-                <a class="nav-link" href="contacto.html">Contactanos</a>
+                <a class="nav-link" href="contacto.html">Contáctanos</a>
               </li>
           </ul>
           
@@ -738,7 +738,7 @@
         <a href="consolas.html">Compra aqui</a>
       </div>
       <div class="btn_consolas">
-        <a href="https://web.whatsapp.com/" target="_blank">Hable con nuestro asesor</a>
+        <a href="https://web.whatsapp.com/" target="_blank">Contacta nuestro asesor</a>
       </div>
       
     </div>
@@ -793,17 +793,17 @@
        </div>
 
        <form style="max-width: 580px;"  action="https://formspree.io/f/xnnaaeyr" method="POST" autocomplete="off">
-         <h2 class="titulo_contacto" style="text-align: center; font-size: 35px; font-weight: 600; color: black;" >CONTACTANOS</h2>
+         <h2 class="titulo_contacto" style="text-align: center; font-size: 35px; font-weight: 600; color: black;" >CONTÁCTANOS</h2>
          <br /><br />
          <!-- Name input -->
          <div data-mdb-input-init class="form-outline mb-4">
-           <input type="text" id="form4Example1" class="form-control" />
+           <input type="text" id="form4Example1" class="form-control" required/>
            <label class="form-label" for="form4Example1">Nombre</label>
          </div>
    
          <!-- Email input -->
          <div data-mdb-input-init class="form-outline mb-4">
-           <input type="email" id="form4Example2" class="form-control" />
+           <input type="email" id="form4Example2" class="form-control" required/>
            <label class="form-label" for="form4Example2">Correo electronico</label>
          </div>
    
@@ -821,7 +821,7 @@
           </label>
         </div>  
         <div class="form-check d-flex justify-content-center mb-4">
-          <input class="form-check-input me-2" type="checkbox" value="" id="form4Example4" required />
+          <input class="form-check-input me-2" type="checkbox" value="" id="form4Example4" required/>
           <label class="form-check-label" for="form4Example4">
             Aceptar los <a href="Términos y Condiciones.pdf" target="_blank">Términos y Condiciones</a>
           </label>
