--- a/compras/consolasretro.html
+++ b/compras/consolasretro.html
@@ -54,7 +54,7 @@
               <li><a class="dropdown-item" href="juegosPlayStation.html">Juegos PlayStation</a></li>
             </ul>
             <li class="nav-item">
-              <a class="nav-link" href="../contacto.html">Contactanos</a>
+              <a class="nav-link" href="../contacto.html">Contáctanos</a>
             </li>
         </ul>
         
@@ -80,7 +80,7 @@
      <div class="d-flex justify-content-center align-items-center h-100">
        <div class="text-white">
          <h1 class="mb-3" style="text-align: center; font-size: 47px; font-weight: 600;">NO PUEDEN FALTAR EL INICIO DE TODO</h1>
-         <h4 class="mb-3">Dale en comprar o contactanos</h4>
+         <h4 class="mb-3">Dale en comprar o contáctanos</h4>
          <a
            data-mdb-ripple-init
            class="btn btn-outline-light btn-lg"
