--- a/consolas.html
+++ b/consolas.html
@@ -51,7 +51,7 @@
                 <li><a class="dropdown-item" href="./compras/juegosPlayStation.html">Juegos PlayStation</a></li>
               </ul>
               <li class="nav-item">
-                <a class="nav-link" href="contacto.html">Contactanos</a>
+                <a class="nav-link" href="contacto.html">Contáctanos</a>
               </li>
           </ul>
           
