Se agrega enlace a pestaña contacto en la ventana nintendo switch, adicional se agrega boton de scroll-top en pestañas de consolas y juegos.

--- a/compras/consolasplayStation.html
+++ b/compras/consolasplayStation.html
@@ -235,6 +235,9 @@
         </div>
         <!-- Copyright -->
       </footer>
+
+      <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="fa-solid fa-arrow-up-from-bracket"></i></a>
+
       <script
       type="text/javascript"
       src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/7.2.0/mdb.umd.min.js"
