--- a/compras/consolasnitendoSwitch.html
+++ b/compras/consolasnitendoSwitch.html
@@ -54,7 +54,7 @@
                   <li><a class="dropdown-item" href="juegosPlayStation.html">Juegos PlayStation</a></li>
                 </ul>
                 <li class="nav-item">
-                  <a class="nav-link" href="../contacto.html"></a>
+                  <a class="nav-link" href="../contacto.html">Contáctanos</a>
                 </li>
             </ul>
             
@@ -226,6 +226,9 @@
         </div>
         <!-- Copyright -->
       </footer>
+
+      <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="fa-solid fa-arrow-up-from-bracket"></i></a>
+
       <script
       type="text/javascript"
       src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/7.2.0/mdb.umd.min.js"
